--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "format": "prettier --write \"./src/**/*.{ts,json,html,scss}\""
+    "format": "prettier --write \"./src/**/*.{ts,json,html,scss}\"",
+    "prepare": "husky"
   },
   "private": true,
   "dependencies": {
@@ -31,12 +32,14 @@
     "@types/jasmine": "~5.1.0",
     "angular-eslint": "18.1.0",
     "eslint": "^9.6.0",
+    "husky": "^9.1.4",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "lint-staged": "^15.2.7",
     "prettier": "3.3.3",
     "typescript": "~5.5.2",
     "typescript-eslint": "8.0.0-alpha.38"
